<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text"
            android:textSize="20dp"
            android:padding="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editButton"
            android:background="@drawable/style_buttons"
            android:layout_marginRight="30dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_buttons"
            android:text="@string/deleteButton" />
    </LinearLayout>

</LinearLayout>