<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.michaelzil.movieslibraryappproject_michaelzilberman.SearchMoviesByInternetActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_movie_library_app"
        android:gravity="center|top"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_text_view"
            android:padding="4dp"
            android:text="@string/searchTextView"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/style_lists_and_edit_texts"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                />
            <Button
                android:id="@+id/goButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@drawable/style_buttons"
                android:text="@string/goButton"
                android:onClick="onClickGo"
                android:layout_marginLeft="4dp" />
        </LinearLayout>
        <ListView
            android:id="@+id/searchMoviesListView"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_lists_and_edit_texts"
            android:divider="@color/red"
            android:dividerHeight="1dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_buttons"
            android:text="@string/cancelButton"
            android:onClick="onClickCancel"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
